调整下目录结构

--- a/src/viz_test/viz.ipynb
+++ b/src/viz_test/viz.ipynb
@@ -11,8 +11,12 @@
     "from PIL import Image, ImageDraw\n",
     "\n",
     "# 打开图片\n",
-    "image = Image.open(\"map_1m_to_10pixel_1_cry.png\")\n",
+    "image = Image.open(\"./test_goalpoint_publisher/data/TPCAP/TPCAP_10.png\")\n",
     "width, height = image.size\n",
+    "\n",
+    "with open('./test_goalpoint_publisher/output/TPCAP_10_result.txt', 'r') as file:\n",
+    "    # 读取整个文件内容\n",
+    "    content = file.read()\n",
     "\n",
     "if image.mode != 'RGBA':\n",
     "    image = image.convert('RGBA')\n",
@@ -25,9 +29,7 @@
     "draw = ImageDraw.Draw(tmp)\n",
     "\n",
     "\n",
-    "with open('file.txt', 'r') as file:\n",
-    "    # 读取整个文件内容\n",
-    "    content = file.read()\n",
+    "\n",
     "\n",
     "# 使用split()按空白字符分割文件内容\n",
     "words = content.split()\n",
